[tool.poetry]
name = "olebot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.3.1"
aiodns = "^3.0.0"
cchardet = "^2.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
